<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/myTitle0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="80px"
        android:layout_y="12px"
        android:text="@string/str_title0"
        android:textSize="24sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="77px"
        android:text="@string/str_title1"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="117px"
        android:text="@string/str_title2"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="157px"
        android:text="@string/str_title3"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="197px"
        android:text="@string/str_title4"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="237px"
        android:text="@string/str_title5"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="277px"
        android:text="@string/str_title6"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/myTitle7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30px"
        android:layout_y="317px"
        android:text="@string/str_title7"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="77px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="117px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="157px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="197px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="237px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="277px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <TextView
        android:id="@+id/mySet7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100px"
        android:layout_y="317px"
        android:text="@string/str_noset"
        android:textSize="16sp" >
    </TextView>

    <Button
        android:id="@+id/setButton1"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="72px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/setButton2"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="112px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/setButton3"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="152px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/setButton4"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="192px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/setButton5"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="232px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/setButton6"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="272px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/setButton7"
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_x="230px"
        android:layout_y="312px"
        android:text="@string/str_set"
        android:textSize="15sp" >
    </Button>

    <Button
        android:id="@+id/myButton1"
        android:layout_width="90px"
        android:layout_height="45px"
        android:layout_x="50px"
        android:layout_y="372px"
        android:text="@string/str_button1"
        android:textSize="16sp" >
    </Button>

    <Button
        android:id="@+id/myButton2"
        android:layout_width="90px"
        android:layout_height="45px"
        android:layout_x="170px"
        android:layout_y="372px"
        android:text="@string/str_button2"
        android:textSize="16sp" >
    </Button>

</AbsoluteLayout>